Build: signup.html styling complete

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -106,7 +106,5 @@
                 </div>
             </div>
     </section>
-{% endblock %}
-
-{% block postloadjs %}
+{% include 'products/includes/contact.html' %}
 {% endblock %}
