--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -182,7 +182,5 @@
             </div>
         </div>
     </section>
-{% endblock %}
-
-{% block postloadjs %}
+{% include 'products/includes/contact.html' %}
 {% endblock %}
