--- a/checkout/templates/checkout/order_success.html
+++ b/checkout/templates/checkout/order_success.html
@@ -117,7 +117,5 @@
             </div>
         </div>
     </section>
-{% endblock %}
-
-{% block postloadjs %}
+{% include 'products/includes/contact.html' %}
 {% endblock %}
