--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -48,4 +48,5 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   </p>
 </form>
 
+{% include 'products/includes/contact.html' %}
 {% endblock %}
