--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -2,28 +2,26 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
-
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
 
-<section class="">
+<section class="products-section">
     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Register</h1>
     <p class="product-text-three mx-2 text-center mb-5 text-blue">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-    <div class="product-container row w-100 justify-content-center mt-0 text-xl-left">
-        <div class="col-4">
-            <form class="signup product-text-three text-center text-blue" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            {% csrf_token %}
-            {{ form.as_p }}
-            {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-            {% endif %}
-            <div class="text-center">
-                <button type="submit" class="edit-button width-50 mx-auto border-solid masthead-button btn btn-primary js-scroll-trigger">{% trans "Sign Up" %} <i class="fas fa-user-plus"></i></button>
-            </div>
+    <div class="product-container row w-100 mx-0 justify-content-center mt-0 text-xl-left">
+        <div class="col-lg-4">
+            <form class="signup signup-text text-center text-blue" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                {% csrf_token %}
+                {{ form|crispy }}
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <div class="text-center">
+                    <button type="submit" class="width-50 mt-5 mx-auto border-solid masthead-button btn btn-primary js-scroll-trigger">{% trans "Sign Up" %} <i class="fas fa-user-plus"></i></button>
+                </div>
             </form>
         </div>
     </div>
 </section>
 
+{% include 'products/includes/contact.html' %}
 {% endblock %}
