--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10520,8 +10520,12 @@ body {
 .user-text { /* https://stackoverflow.com/questions/1409649/how-to-change-the-height-of-a-br */
     font-size: 10px;
 }
-.signup label {
+.signup label, #div_id_login label, #div_id_password label {
     display: none;
+}
+#div_id_remember label {
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 @media screen and (orientation: portrait){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
@@ -10552,7 +10556,7 @@ body {
     .product-text-three {
         font-size: calc(14px + (38 - 14) * ((100vw - 300px) / 1620));
     }
-    .signup-text {
+    .signup-text, .login-text {
         font-size: calc(12px + (38 - 12) * ((100vw - 300px) / 1620));
     }
     .flex-margin-b {
