--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -12,13 +12,20 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+<section class="products-section">
+    <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Password Reset</h1>
+    <p class="product-text-three mx-2 text-center mb-5 text-blue">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+    <div class="product-container row w-100 mx-0 justify-content-center mt-0 text-xl-left">
+        <div class="col-lg-4">
+            <form class="text-center text-blue" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="{% trans 'Reset My Password' %}" />
+            </form>
+        </div>
+    </div>
+    <p class="product-text-three mt-4 text-center mb-5 text-blue">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+</section>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
