--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,11 +6,13 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <section class="products-section">
+        <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Password Reset</h1>
+        <p class="product-text-three mt-4 text-center mb-5 text-blue">{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    </section>
 {% endblock %}
