--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -25,7 +25,7 @@
                         <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                             {% csrf_token %}
                             {{ form|crispy }}
-                            <button class="mb-4 btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                            <button class="width-50 border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update Information</button>
                         </form>
                     </div>
                     <div class="col-12 col-lg-8">
