--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -38,7 +38,7 @@
             {% endif %}
             <button class="width-50 mt-5 mx-auto border-solid masthead-button btn btn-primary js-scroll-trigger" type="submit">{% trans "Sign In" %}</button>
             <p class="mt-2">
-                <a class="button login-text text-bluey" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                <a class="button login-text text-blue" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
             </p>
             </form>
         </div>
