--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <form action="{% url 'product_admin' %}?dataset=products" method="post">
+                                        <form action="{% url 'product_admin' %}?dataset=products" method="POST">
                                         {% csrf_token %}
                                             <input class="product-search-input text-blue text-xs" type="text" name="product_search" id="product_search" value=" search for {{ dataset }}...">
                                             <button class="search-button text-center" type="submit">
@@ -86,6 +86,14 @@
                                         </form>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                    <form class="mt-3" action="{% url 'product_admin' %}?dataset=products" method="POST" id="product-update-form">
+                                        {% csrf_token %}
+                                        {{ form|crispy }}
+                                        <button class="width-50 border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update Information</button>
+                                    </form>
+                                </div>
                                 <!-- <div class="row">
                                     <div class="col-4">
                                         <button type="submit" class="edit-button border-solid masthead-button btn btn-primary js-scroll-trigger flex-margin-b">
@@ -93,6 +101,7 @@
                                         </button>
                                     </div>
                                 </div> -->
+                                </div>
                             </div>
                         </div>
                     </div>
