Build: added product_query_length to count records returned on product_admin.html

--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -76,7 +76,7 @@
                                     {% endif %}
                                 </div>
                                 <div class="row">
-                                    <div class="col-12">
+                                    <div class="col-6">
                                         <form action="{% url 'product_admin' %}?dataset=products" method="GET">
                                         {% csrf_token %}
                                             <input class="product-search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search for {{ dataset }}...">
@@ -84,6 +84,15 @@
                                                     <i class="fas fa-search"></i>
                                             </button>
                                         </form>
+                                    </div>
+                                    <div class="col-6">
+                                        {% if product_query_length != 0 %}
+                                             <input class="product-search-input text-blue text-xs float-right" type="text" name="product_query_length" id="product_query_length" 
+                                             value=" record 1 of: {{ product_query_length }}">
+                                        {% else %}
+                                             <input class="product-search-input text-blue text-xs float-right" type="text" name="no_product_query_length" id="no_product_query_length" 
+                                             value=" no records found">
+                                        {% endif %}
                                     </div>
                                 </div>
                                 <div class="row">
