--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -79,8 +79,9 @@
                                     <div class="col-12 col-lg-5 justify-content-center p-0 ml-lg-n2 pl-xl-4">
                                         <div class="product-search-container mx-auto">
                                             <div class="d-inline">
-                                                <form class="ml-n4 ml-lg-0" action="{% url 'product_admin' %}?dataset=products" method="GET">
+                                                <form class="ml-n4 ml-lg-0" action="{% url 'product_admin' %}" method="GET">
                                                 {% csrf_token %}
+                                                    <input class="hidden" type="text" name="dataset" id="dataset" value="{{ dataset }}">
                                                     <input class="product-search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search for {{ dataset }}...">
                                                     <button class="search-button text-center" type="submit">
                                                             <i class="fas fa-search"></i>
