--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -19,9 +19,9 @@
                     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Product Admin</h1>
                 </div>
                 <div class="col-xl-6">
-                    {% if dataset == "categories" and searchset %}
-                        {% for image in image %}
-                            <img class="img-fluid image-80" src="{{ image.image }}" alt="{{ categories }} image" />
+                    {% if dataset == "categories" %}
+                        {% for image in form %}
+                            <img class="img-fluid image-80" src="/media/{{ image.image }}" alt="{{ categories }} image" />
                         {% endfor %}
                     {% else %}
                         <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
@@ -99,9 +99,9 @@
                                                 </button>
                                             </div>
                                             <div class="d-inline">
-                                                {% if product_query_length != 0 %}
+                                                {% if return_query_length != 0 %}
                                                     <input class="product-search-input text-blue text-xs text-center" type="text" name="product_query_length" id="product_query_length" 
-                                                    value=" record 1 of: {{ product_query_length }}">
+                                                    value=" record 1 of: {{ return_query_length }}">
                                                 {% else %}
                                                     <input class="product-search-input text-blue text-xs text-center" type="text" name="no_product_query_length" id="no_product_query_length" 
                                                     value=" no records found">
