--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -25,7 +25,7 @@
                 <div class="col-xl-6">
                     {% if category %}
                         {% for image in image %}
-                            <img class="img-fluid image-80" src="{{ image.image }}" alt="{{ category }} image" />
+                            <img class="img-fluid image-80" src="/media/{{ image.image }}" alt="{{ category }} image" />
                         {% endfor %}
                     {% else %}
                         <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
