--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -20,9 +20,8 @@
                 </div>
                 <div class="col-xl-6">
                     {% if dataset == "categories" %}
-                        {% for image in form %}
-                            <img class="img-fluid image-80" src="/media/{{ image.image }}" alt="{{ categories }} image" />
-                        {% endfor %}
+                        <!-- Credit: https://stackoverflow.com/questions/2236691/how-do-i-display-the-value-of-a-django-form-field-in-a-template -->
+                        <img class="img-fluid image-80" src="/media/{{ form.image.value }}" alt="{{ form.name.value }} image" />
                     {% else %}
                         <img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" />
                     {% endif %}
@@ -117,10 +116,10 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                    <form class="mt-3" action="{% url 'product_admin' %}?dataset=products" method="POST" id="product-update-form">
+                                    <form class="mt-3" action="{% url 'update_product' form.name.value %}" method="POST" id="product-update-form">
                                         {% csrf_token %}
                                         {{ form|crispy }}
-                                        <button class="width-50 border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update Information</button>
+                                        <button class="border-solid masthead-button btn btn-primary js-scroll-trigger float-right">Update</button>
                                     </form>
                                 </div>
                                 <!-- <div class="row">
